add/change license, drop call of tirex-batch

--- a/scripts/config.cfg
+++ b/scripts/config.cfg
@@ -1,4 +1,21 @@
+# SPDX-License-Identifier: GPL-3.0-or-later
+# OpenRailwayMap Copyright (C) 2019 Michael Reichert
+#
+# This file is part of the OpenRailwayMap server admin tools repository
+# (https://github.com/OpenRailwayMap/server-admin).
+#
+# This program is free software: you can redistribute it and/or modify it under the terms of the
+# GNU General Public License as published by the Free Software Foundation, version 3.
+#
+# This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without
+# even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+# General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program. If not, see <http://www.gnu.org/licenses/>.
+#
 # Configuration file for tile database and routing upgrade
+
 
 # Paths for OSM Data
 # ------------------
@@ -47,9 +64,9 @@ DATABASE_NAME=gis
 OSM2PGSQL_STYLE=/opt/OpenRailwayMap-CartoCSS/setup/openstreetmap-carto.style
 # Osm2pgsql tag transform file (Lua)
 OSM2PGSQL_LUA=/opt/OpenRailwayMap-CartoCSS/setup/openstreetmap-carto.lua
-# Use flatnodes file
-OSM2PGSQL_USE_FLATNODES=1
-# Flatnodes file path (about 50 GB)
+# Flatnodes file path (about 50 GB large file which should be located on a SSD drive)
+# Do not set this variable (comment it out) if you want to store node locations in the
+# planet_osm_nodes table. This is slower for a full planet import (both filtered and not filtered)
 OSM2PGSQL_FLATNODES=/nvme/data/flatnodes/flat.nodes
 # Zoom levels to expire tiles at
 EXPIRE_TILES_ZOOM=12:19
