remove unnecessary variable

--- a/scripts/config.cfg
+++ b/scripts/config.cfg
@@ -77,6 +77,5 @@ METATILE_ROOT_DIR=/var/lib/tirex/tiles/
 # Map names used by Tirex. They must match the subdirectories of $METATILE_ROOT_DIR. If you use
 # multiple maps, separate them by comma
 TIREX_MAPS="standard,maxspeed,signals"
-# Tirex job priority for pre-rendering tiles
-TIREX_PRERENDER_QUEUE=15
+# Tirex job priority for re-rendering tiles when their data has changed
 TIRES_RERENDER_PRIO=25
