improve handling of non-success and partial-success return codes

--- a/scripts/config.cfg
+++ b/scripts/config.cfg
@@ -51,6 +51,10 @@ ROUTING=0
 
 # Sleep duration until next update
 SLEEP_SECONDS=1800s
+# Time to sleep after Pyosmium returned code 3
+# Code 3 is returned if the download fails, the planet dump is too old or the diffs required are
+# not available on the server any more.
+DOWNLOAD_FAILURE_SLEEP_TIME=3700s
 
 # Osmium filter expression
 OSMIUM_FILTER_EXPR="nwr/railway r/route=train r/route=light_rail r/route=tram r/route=subway nwr/disused:railway nwr/abandoned:railway nwr/razed:railway nwr/construction:railway nwr/proposed:railway"
