fix unbound variable, add refreshing of materialized views

--- a/scripts/config.cfg
+++ b/scripts/config.cfg
@@ -61,12 +61,14 @@ OSMIUM_FILTER_EXPR="nwr/railway r/route=train r/route=light_rail r/route=tram r/
 
 # Tileserver related settings
 # ---------------------------
+# Map style directory
+MAPSTYLE_DIR=/opt/OpenRailwayMap-CartoCSS
 # Database name
 DATABASE_NAME=gis
 # Osm2pgsql style file
-OSM2PGSQL_STYLE=/opt/OpenRailwayMap-CartoCSS/setup/openstreetmap-carto.style
+OSM2PGSQL_STYLE=$MAPSTYLE_DIR/setup/openstreetmap-carto.style
 # Osm2pgsql tag transform file (Lua)
-OSM2PGSQL_LUA=/opt/OpenRailwayMap-CartoCSS/setup/openstreetmap-carto.lua
+OSM2PGSQL_LUA=$MAPSTYLE_DIR/setup/openstreetmap-carto.lua
 # Flatnodes file path (about 50 GB large file which should be located on a SSD drive)
 # Do not set this variable (comment it out) if you want to store node locations in the
 # planet_osm_nodes table. This is slower for a full planet import (both filtered and not filtered)
