use correct format to specify tile expiry zoom levels

--- a/scripts/config.cfg
+++ b/scripts/config.cfg
@@ -74,7 +74,7 @@ OSM2PGSQL_LUA=$MAPSTYLE_DIR/setup/openstreetmap-carto.lua
 # planet_osm_nodes table. This is slower for a full planet import (both filtered and not filtered)
 OSM2PGSQL_FLATNODES=/nvme/data/flatnodes/flat.nodes
 # Zoom levels to expire tiles at
-EXPIRE_TILES_ZOOM=12:19
+EXPIRE_TILES_ZOOM=12-19
 # Path for tile expiry output file for Osm2pgsql
 EXPIRE_OUTPUT=/nvme/data/tileupdate/expiry.log
 # Metatile directory
