--- a/scripts/config.cfg
+++ b/scripts/config.cfg
@@ -83,4 +83,4 @@ METATILE_ROOT_DIR=/var/lib/tirex/tiles/
 # multiple maps, separate them by comma
 TIREX_MAPS="standard,maxspeed,signals"
 # Tirex job priority for re-rendering tiles when their data has changed
-TIRES_RERENDER_PRIO=25
+TIREX_RERENDER_PRIO=25
