Simplify tile expiry lists by dropping tiles pointing to the same metatile

--- a/scripts/config.cfg
+++ b/scripts/config.cfg
@@ -37,6 +37,7 @@ TIMESTAMP_PATH=/nvme/data/timestamp.txt
 
 # Binaries
 # --------
+PYTHON=python3
 PYOSMIUM_UP_TO_DATE=pyosmium-up-to-date
 OSMIUM=osmium
 OSM2PGSQL=osm2pgsql
