--- a/scripts/config.cfg
+++ b/scripts/config.cfg
@@ -41,7 +41,7 @@ PYTHON=python3
 PYOSMIUM_UP_TO_DATE=pyosmium-up-to-date
 OSMIUM=osmium
 OSM2PGSQL=osm2pgsql
-MERGE_TILES=/opt/OpenRailwayMap-server-config/merge_tiles_to_metatiles.py
+MERGE_TILES=/opt/OpenRailwayMap-server-config/scripts/merge_tiles_to_metatiles.py
 
 # Enable/Disable Steps
 # --------------------
@@ -74,6 +74,8 @@ OSM2PGSQL_LUA=$MAPSTYLE_DIR/setup/openstreetmap-carto.lua
 # Do not set this variable (comment it out) if you want to store node locations in the
 # planet_osm_nodes table. This is slower for a full planet import (both filtered and not filtered)
 OSM2PGSQL_FLATNODES=/nvme/data/flatnodes/flat.nodes
+# Number of processes for Osm2pgsql for update
+OSM2PGSQL_NUMBER_PROCESSES=2
 # Zoom levels to expire tiles at
 EXPIRE_TILES_ZOOM=12-19
 # Path for tile expiry output file for Osm2pgsql
