changes of the last weeks

--- a/ansible/hosts.yml
+++ b/ansible/hosts.yml
@@ -1,6 +1,6 @@
 all:
   hosts:
-    openrailwaymap2019.michreichert.de:
+    buegelfalte.openrailwaymap.org:
       ansible_user: root
   vars:
     ansible_python_interpreter: python3
@@ -8,15 +8,23 @@ all:
   children:
     base:
       hosts:
-        openrailwaymap2019.michreichert.de
+        buegelfalte.openrailwaymap.org
 
     security:
       hosts:
-        openrailwaymap2019.michreichert.de
+        buegelfalte.openrailwaymap.org
+
+    letsencrypt:
+      hosts:
+        buegelfalte.openrailwaymap.org
+      vars:
+        ssl_domain: openrailwaymap.org
+        #certificate_alt_names: 'DNS:openrailwaymap.org,DNS:www.openrailwaymap.org,DNS:tile.openrailwaymap.org,DNS:a.tile.openrailwaymap.org,DNS:b.tile.openrailwaymap.org,DNS:c.tile.openrailwaymap.org,DNS:api.openrailwaymap.org'
+        certificate_alt_names: 'DNS:buegelfalte.openrailwaymap.org,DNS:buegelfalte.openrailwaymap.org'
 
     tileserver:
       hosts:
-        openrailwaymap2019.michreichert.de:
+        buegelfalte.openrailwaymap.org:
       vars:
         osm_dbname: gis
         pg_version: 11
@@ -25,3 +33,24 @@ all:
         flatnodes_dir: /nvme/data/flatnodes
         tile_expiry_dir: /nvme/data/tileupdate
         cartocss_dir: /opt/OpenRailwayMap-CartoCSS
+        website_hostname: www.openrailwaymap.org
+        website_hostname_aliases:
+          - openrailwaymap.org
+          - buegelfalte.openrailwaymap.org
+        api_hostname: api.openrailwaymap.org
+        website_dir: /var/www/www.openrailwaymap.org
+        openrailwaymap_user_home: /srv/openrailwaymap
+        apache2_logdir: /var/log/apache2
+
+    munin_node:
+      hosts:
+        buegelfalte.openrailwaymap.org:
+          ssl_domain: openrailwaymap.org
+          accept_from: ['148.251.245.55', '2a01:4f8:192:81b6::2']
+      vars:
+        # Do not mention ip_ here, it is handled separately.
+        munin_node_plugins:
+          - {name: apache_accesses, dest: apache_accesses}
+          - {name: apache_processes, dest: apache_processes}
+          - {name: apache_volume, dest: apache_volume}
+        munin_node_ip_plugin: true
