API: exclude /.well-known from proxying, add blog

--- a/ansible/hosts.yml
+++ b/ansible/hosts.yml
@@ -2,6 +2,7 @@ all:
   hosts:
     buegelfalte.openrailwaymap.org:
       ansible_user: root
+      apache2_logdir: /var/log/apache2
   vars:
     ansible_python_interpreter: python3
 
@@ -19,8 +20,7 @@ all:
         buegelfalte.openrailwaymap.org
       vars:
         ssl_domain: openrailwaymap.org
-        #certificate_alt_names: 'DNS:openrailwaymap.org,DNS:www.openrailwaymap.org,DNS:tile.openrailwaymap.org,DNS:a.tile.openrailwaymap.org,DNS:b.tile.openrailwaymap.org,DNS:c.tile.openrailwaymap.org,DNS:api.openrailwaymap.org'
-        certificate_alt_names: 'DNS:buegelfalte.openrailwaymap.org,DNS:buegelfalte.openrailwaymap.org'
+        certificate_alt_names: 'DNS:buegelfalte.openrailwaymap.org,DNS:openrailwaymap.org,DNS:www.openrailwaymap.org,DNS:tiles.openrailwaymap.org,DNS:a.tiles.openrailwaymap.org,DNS:b.tiles.openrailwaymap.org,DNS:c.tiles.openrailwaymap.org,DNS:api.openrailwaymap.org,DNS:blog.openrailwaymap.org'
 
     tileserver:
       hosts:
@@ -40,7 +40,14 @@ all:
         api_hostname: api.openrailwaymap.org
         website_dir: /var/www/www.openrailwaymap.org
         openrailwaymap_user_home: /srv/openrailwaymap
-        apache2_logdir: /var/log/apache2
+
+    blog:
+      hosts:
+        buegelfalte.openrailwaymap.org:
+          blog:
+            hostname: blog.openrailwaymap.org
+            hostname_aliases: []
+            directory: /var/www/blog
 
     munin_node:
       hosts:
