Letsencrypt: use production API

--- a/ansible/roles/letsencrypt/tasks/templates/acme_scripts_config.cfg
+++ b/ansible/roles/letsencrypt/tasks/templates/acme_scripts_config.cfg
@@ -18,9 +18,9 @@ ACME_TINY_DIR=/opt/acme-scripts
 
 # ACME API to use
 # development API, strongy recommend for testing to avoid running against the tough usage limits of the production API
-ACME_API="https://acme-staging-v02.api.letsencrypt.org/directory"
+#ACME_API="https://acme-staging-v02.api.letsencrypt.org/directory"
 # production API
-#ACME_API="https://acme-v02.api.letsencrypt.org/directory"
+ACME_API="https://acme-v02.api.letsencrypt.org/directory"
 
 # Path to acme-tiny Python script
 ACME_TINY=acme-tiny
