Include repeated Apache directives for ACME and 80→443 redirect

--- a/ansible/roles/tileserver_step2/tasks/main.yml
+++ b/ansible/roles/tileserver_step2/tasks/main.yml
@@ -150,6 +150,10 @@
     notify:
       - systemd reload apache2
 
+  - name: Ensure that files included by Apache configuration are present
+    when: "'letsencrypt' in group_names"
+    include_tasks: '../../../includes/redirect-and-acme-challenge-includes.yml'
+
   - name: Add tileserver configuration for Apache virtualhost
     copy:
       src: '{{ item }}'
