--- a/ansible/roles/tileserver_step2/tasks/files/tiles.openrailwaymap.org.conf
+++ b/ansible/roles/tileserver_step2/tasks/files/tiles.openrailwaymap.org.conf
@@ -1,6 +1,21 @@
 # destination location of this file: /etc/apache2/sites-available
 <VirtualHost *:80>
-    Include /etc/apache2/sites-available/tiles.openrailwaymap.org.inc
+    {% if 'letsencrypt' in group_names %}
+      ServerName tiles.openrailwaymap.org
+      ServerAlias a.tiles.openrailwaymap.org
+      ServerAlias b.tiles.openrailwaymap.org
+      ServerAlias c.tiles.openrailwaymap.org
+      ServerAlias tiles.buegelfalte.openrailwaymap.org
+      ServerAlias openrailwaymap2019.michreichert.de
+      ServerAdmin info@openrailwaymap.org
+      {% for host_alias in website_hostname_aliases -%}
+        ServerAlias {{ host_alias }}
+      {% endfor %}
+        Include /etc/apache2/sites-available/letsencrypt-acme-challenge.inc
+        Include /etc/apache2/sites-available/redirect-http.inc
+      {% else %}
+        Include /etc/apache2/sites-available/tiles.openrailwaymap.org.inc
+    {% endif %}
 </VirtualHost>
 <VirtualHost *:443>
     SSLEngine on
@@ -12,4 +27,5 @@
     SSLSessionTickets off
 
     Include /etc/apache2/sites-available/tiles.openrailwaymap.org.inc
+    Include /etc/apache2/sites-available/letsencrypt-acme-challenge.inc
 </VirtualHost>
