--- a/ansible/roles/website/tasks/templates/api.openrailwaymap.org.conf
+++ b/ansible/roles/website/tasks/templates/api.openrailwaymap.org.conf
@@ -1,5 +1,11 @@
 <VirtualHost *:80>
+    {% if 'letsencrypt' in group_names %}
+    ServerName {{ api_hostname }}
+    Include /etc/apache2/sites-available/letsencrypt-acme-challenge.inc
+    Include /etc/apache2/sites-available/redirect-http.inc
+    {% else %}
     Include /etc/apache2/sites-available/api.openrailwaymap.org.inc
+    {% endif %}
 </VirtualHost>
 <VirtualHost *:443>
     SSLEngine on
@@ -11,4 +17,7 @@
     SSLSessionTickets off
 
     Include /etc/apache2/sites-available/api.openrailwaymap.org.inc
+    {% if 'letsencrypt' in group_names %}
+    Include /etc/apache2/sites-available/letsencrypt-acme-challenge.inc
+    {% endif %}
 </VirtualHost>
