--- a/ansible/roles/website/tasks/templates/www.openrailwaymap.org.conf
+++ b/ansible/roles/website/tasks/templates/www.openrailwaymap.org.conf
@@ -1,5 +1,14 @@
 <VirtualHost *:80>
+    {% if 'letsencrypt' in group_names %}
+    ServerName {{ website_hostname }}
+    {% for host_alias in website_hostname_aliases -%}
+    ServerAlias {{ host_alias }}
+    {% endfor %}
+    Include /etc/apache2/sites-available/letsencrypt-acme-challenge.inc
+    Include /etc/apache2/sites-available/redirect-http.inc
+    {% else %}
     Include /etc/apache2/sites-available/www.openrailwaymap.org.inc
+    {% endif %}
 </VirtualHost>
 <VirtualHost *:443>
     SSLEngine on
@@ -11,4 +20,7 @@
     SSLSessionTickets off
 
     Include /etc/apache2/sites-available/www.openrailwaymap.org.inc
+    {% if 'letsencrypt' in group_names %}
+    Include /etc/apache2/sites-available/letsencrypt-acme-challenge.inc
+    {% endif %}
 </VirtualHost>
