fix path to /etc/apache2/sites-available/letsencrypt-acme-challenges.inc

--- a/ansible/roles/tileserver_step2/tasks/main.yml
+++ b/ansible/roles/tileserver_step2/tasks/main.yml
@@ -155,7 +155,7 @@
     include_tasks: '../../../includes/redirect-and-acme-challenge-includes.yml'
 
   - name: Add tileserver configuration for Apache virtualhost
-    copy:
+    template:
       src: '{{ item }}'
       dest: '/etc/apache2/sites-available/{{ item }}'
       owner: root
