--- a/ansible/hosts.yml
+++ b/ansible/hosts.yml
@@ -3,6 +3,8 @@ all:
     buegelfalte.openrailwaymap.org:
       ansible_user: root
       apache2_logdir: /var/log/apache2
+      apache2:
+        max_request_workers: 200
   vars:
     ansible_python_interpreter: python3
 
