Apache2: support MinSpareServers and MaxSpareServers, double defaults

--- a/ansible/hosts.yml
+++ b/ansible/hosts.yml
@@ -5,6 +5,8 @@ all:
       apache2_logdir: /var/log/apache2
       apache2:
         max_request_workers: 200
+        min_spare_servers: 10
+        max_spare_servers: 20
   vars:
     ansible_python_interpreter: python3
 
