--- a/ansible/roles/tileserver_step2/tasks/main.yml
+++ b/ansible/roles/tileserver_step2/tasks/main.yml
@@ -188,9 +188,15 @@
       group: root
       mode: 0644
       content: |
+        {% if apache2.max_request_workers is defined %}
         MaxRequestWorkers {{ apache2.max_request_workers }}
+        {% endif %}{% if apache2.min_spare_servers %}
+        MinSpareServers {{ apache2.min_spare_servers }}
+        {% endif %}{% if apache2.max_spare_servers %}
+        MaxSpareServers {{ apache2.max_spare_servers }}
+        {% endif %}
     register: max_request_workers_result
-    when: apache2.max_request_workers is defined
+    when: apache2.max_request_workers is defined or apache2.min_spare_servers is defined or apache2.max_spare_servers is defined
 
   - name: Enable /etc/apache2/conf-available/max_request_workers.conf
     shell:
