enable mod_tile Munin checks

--- a/ansible/hosts.yml
+++ b/ansible/hosts.yml
@@ -80,6 +80,10 @@ all:
           - {name: postgres_size_ALL, dest: postgres_size_}
           - {name: postgres_transactions_ALL, dest: postgres_transactions_}
           - {name: postgres_tuples_ALL, dest: postgres_tuples_}
+          - {name: mod_tile_fresh, dest: mod_tile_fresh}
+          - {name: mod_tile_latency, dest: mod_tile_latency}
+          - {name: mod_tile_response, dest: mod_tile_response}
+          - {name: mod_tile_zoom, dest: mod_tile_zoom}
           - {name: tirex-status-active-requests, dest: tirex-status-active-requests}
           - {name: tirex-status-queued-requests, dest: tirex-status-queued-requests}
           - {name: tirex-status-queued-requests-age, dest: tirex-status-queued-requests-age}
