mail: write correct content to /etc/postfix/bad_senders

--- a/ansible/roles/mail/tasks/write_and_hash.yml
+++ b/ansible/roles/mail/tasks/write_and_hash.yml
@@ -5,7 +5,7 @@
     owner: root
     group: root
     mode: 0644
-    src: virtual_alias_map
+    src: '{{ item }}'
   register: map_result
 
 - name: Run postmap if required on virtual_alias_map
