--- a/ansible/hosts.yml
+++ b/ansible/hosts.yml
@@ -15,6 +15,16 @@ all:
       hosts:
         buegelfalte.openrailwaymap.org
 
+    mail:
+      hosts:
+        buegelfalte.openrailwaymap.org:
+          mail:
+            mailman2: true
+            http_hostname: lists.openrailwaymap.org
+#      vars:
+#        mail:
+#          mailman2: true
+
     security:
       hosts:
         buegelfalte.openrailwaymap.org
