Mailman: fix path to certificates

--- a/ansible/roles/mail/tasks/templates/mailman.conf
+++ b/ansible/roles/mail/tasks/templates/mailman.conf
@@ -9,8 +9,8 @@
 </VirtualHost>
 <VirtualHost *:443>
     SSLEngine on
-    SSLCertificateFile /etc/letsencrypt/openrailwaymap.org-old/live/fullchain.pem
-    SSLCertificateKeyFile /etc/letsencrypt/openrailwaymap.org-old/live/privkey.key
+    SSLCertificateFile /etc/letsencrypt/openrailwaymap.org-old/live/openrailwaymap.org/fullchain.pem
+    SSLCertificateKeyFile /etc/letsencrypt/openrailwaymap.org-old/live/openrailwaymap.org/privkey.pem
 #    SSLCertificateFile /etc/letsencrypt/openrailwaymap.org/openrailwaymap.org-chain.crt
 #    SSLCertificateKeyFile /etc/letsencrypt/openrailwaymap.org/domain.key
     SSLProtocol all -SSLv3 -TLSv1 -TLSv1.1
