current state of Mailman 3 setup

--- a/ansible/hosts.yml
+++ b/ansible/hosts.yml
@@ -20,6 +20,7 @@ all:
         buegelfalte.openrailwaymap.org:
           mail:
             mailman2: true
+            mailman3: true
             http_hostname: lists.openrailwaymap.org
 #      vars:
 #        mail:
