--- a/ansible/roles/mail/tasks/main.yml
+++ b/ansible/roles/mail/tasks/main.yml
@@ -318,6 +318,62 @@
             state: started
             enabled: yes
 
+    - name: Mailman 3 setup
+      when: mail.mailman3
+      block:
+        - name: 'Create entries in Debconf database for Mailman 3 setup'
+          shell:
+            cmd: 'debconf-set-selections'
+            stdin: "{{ lookup('file', 'mailman3_debconf_settings') }}"
+
+        - name: Install Mailman 3 packages from APT
+          apt:
+            name: [mailman3-full, lynx, postgresql]
+
+        - name: Enable peer authentication for PostgreSQL for user mailman3
+          postgresql_pg_hba:
+            contype: local
+            databases: 'mailman3'
+            dest: '/etc/postgresql/{{ pg_version }}/main/pg_hba.conf'
+            method: peer
+            users: 'mailman3'
+            mode: 0640
+            owner: postgres
+            group: postgres
+          notify:
+            - systemctl reload postgresql
+
+        - name: Modify /etc/mailman3/mailman.cfg
+          lineinfile:
+            path: /etc/mailman3/mailman.cfg
+            regexp: '{{ item.regexp }}'
+            line: '{{ item.line }}'
+          loop:
+            - {'regexp': '^#?site_owner: ', 'line': 'site_owner: info@openrailwaymap.org'}
+            - {'regexp': '^#?url: postgres://', 'line': 'url: postgres://mailman3@:5432/mailman3'}
+
+        - name: Modify /etc/mailman3/mailman-web.py
+          replace:
+            path: /etc/mailman3/mailman-web.py
+            regexp: '{{ item.regexp }}'
+            replace: '{{ item.line }}'
+          loop:
+            - {'regexp': "^ADMINS = \\(\\n( *)\\('[^']*', '[^']*'\\), *\\n\\)", 'line': "ADMINS = (\\n    ('OpenRailwayMap Mailman Admin', 'info@openrailwaymap.org')\\n)"}
+            - {'regexp': "^    #? *'django.contrib.admindocs', *$", 'line': "    'django.contrib.admindocs',"}
+            - {'regexp': "^#? *SECURE_PROXY_SSL_HEADER = ('HTTP_X_FORWARDED_PROTO', 'https')", 'line': "SECURE_PROXY_SSL_HEADER = ('HTTP_X_FORWARDED_PROTO', 'https')"}
+            - {'regexp': "^#? *SESSION_COOKIE_SECURE =.[^\n]*$", 'line': "SESSION_COOKIE_SECURE = True"}
+            - {'regexp': "^#? *SECURE_CONTENT_TYPE_NOSNIFF =.[^\n]*$", 'line': "SECURE_CONTENT_TYPE_NOSNIFF = True"}
+            - {'regexp': "^#? *SECURE_BROWSER_XSS_FILTER =.[^\n]*$", 'line': "SECURE_BROWSER_XSS_FILTER = True"}
+            - {'regexp': "^#? *CSRF_COOKIE_SECURE =.[^\n]*$", 'line': "CSRF_COOKIE_SECURE = True"}
+            - {'regexp': "^#? *CSRF_COOKIE_HTTPONLY =.[^\n]*$", 'line': "CSRF_COOKIE_HTTPONLY = True"}
+            - {'regexp': "^#? *X_FRAME_OPTIONS =.[^\n]*$", 'line': "X_FRAME_OPTIONS = 'DENY'"}
+            - {'regexp': "^#? *EMAILNAME =.[^\n]*$", 'line': "EMAILNAME = 'openrailwaymap.org'"}
+              #- {'regexp': "^        'ENGINE': 'django.db.backends.sqlite3',", 'line': "#        'ENGINE': 'django.db.backends.sqlite3',"}
+              #- {'regexp': "^        '#ENGINE': 'django.db.backends.postgresql_psycopg2',", 'line': "        'ENGINE': 'django.db.backends.postgresql_psycopg2',"}
+          #'ENGINE': 'django.db.backends.postgresql_psycopg2',", *$", 'line': "    'django.contrib.admindocs',"}
+
+
+
     - name: Write Spamassassin configuration to /etc/spamassassin/local.cf
       copy:
         dest: /etc/spamassassin/local.cf
@@ -344,6 +400,10 @@
       systemd:
         daemon_reload: yes
     - name: systemctl reload apache2
+      systemd:
+        name: apache2
+        state: reloaded
+    - name: systemctl reload postgresql
       systemd:
         name: apache2
         state: reloaded
